reporter-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reporter-ns
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporter-app-deployment
  namespace: reporter-ns
spec:
  replicas: 0
  selector:
    matchLabels:
      app: reporter-app
  template:
    metadata:
      labels:
        app: reporter-app
    spec:
      containers:
      - name: reporter-app
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: reporter-app-service
  namespace: reporter-ns
spec:
  selector:
    app: reporter-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporter-app-ingress
  namespace: reporter-ns
spec:
  ingressClassName: nginx
  rules:
  - host: reporter-app.dmcon.local
    http:
      paths:
      - backend:
          service:
            name: reporter-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
